# Verloggeur

./: Makefile.am  configure.ac
src/: Makefile.am  database.py  event.py  irc.py  plugins.py  verloggeur.py
src/plugins/test/: __init__.py  test.py
