## Process this file with automake to produce Makefile.in
## Created by Anjuta

## The main script
bin_SCRIPTS = verloggeur.py

## Directory where .class files will be installed
verloggeurdir = $(pythondir)/verloggeur

verloggeur_PYTHON = \
	verloggeur.py \
	event.py \
	plugins.py \
	database.py \
	irc.py
